--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   mongo:
     image: mongo:latest
-    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    # command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
     ports:
       - "27017:27017"
     volumes:
