--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@inventory-system/client",
   "private": true,
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
